Update generated content

--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -81,6 +81,33 @@
     // Example JSON array with news objects
     const newsData = [
   {
+    "title": "Xăng, điều hòa là mặt hàng thiết yếu, tại sao đánh thuế tiêu thụ đặc biệt?",
+    "content": "Bà Lê Thị Nga đã đề xuất bỏ thuế tiêu thụ đặc biệt đối với xăng và điều hòa nhiệt độ, coi chúng là mặt hàng thiết yếu trong đời sống hàng ngày. Bà cho rằng việc áp thuế tiêu thụ đặc biệt lên những hàng hóa này là không phù hợp, vì bản chất của thuế này là đánh vào hàng xa xỉ. Trong khi đó, xăng và điều hòa đều là những sản phẩm cần thiết cho người dân, không nên bị đánh thuế cao. Tuy nhiên, Bộ Tài chính vẫn giữ quan điểm cần thu thuế để bảo vệ môi trường và khuyến khích tiết kiệm năng lượng.",
+    "link": "https://tuoitre.vn/xang-dieu-hoa-la-mat-hang-thiet-yeu-tai-sao-danh-thue-tieu-thu-dac-biet-2025031015332775.htm",
+    "cat": "kinh-doanh",
+    "positivity": 6,
+    "importance": 8,
+    "question": "Tại sao cần xem xét bỏ thuế tiêu thụ đặc biệt với xăng và điều hòa?",
+    "answers": [
+      {
+        "text": "Vì chúng là mặt hàng thiết yếu trong đời sống hàng ngày.",
+        "correct": true
+      },
+      {
+        "text": "Vì chúng gây hại cho môi trường.",
+        "correct": false
+      },
+      {
+        "text": "Vì thuế làm tăng giá thành sản phẩm.",
+        "correct": false
+      },
+      {
+        "text": "Vì chúng không được sử dụng rộng rãi.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Nhiều người lo mất tiền cọc, đền hợp đồng khi cấm cho thuê căn hộ lưu trú ngắn ngày",
     "content": "Sau khi UBND TP.HCM ban hành quyết định cấm cho thuê căn hộ lưu trú ngắn ngày, nhiều cư dân cung cấp dịch vụ Airbnb đang lo lắng về việc mất tiền cọc và phí hợp đồng. Họ đã đầu tư hàng trăm triệu đồng vào nội thất và cơ sở vật chất cho các căn hộ này, và giờ phải đối mặt với nguy cơ thiệt hại tài chính lớn. Các cư dân đã gửi đơn xin gia hạn thời gian hoạt động để có thể sắp xếp đền bù cho khách hàng và thanh lý cơ sở vật chất đã đầu tư.",
     "link": "https://tuoitre.vn/nhieu-nguoi-lo-mat-tien-coc-den-hop-dong-khi-cam-cho-thue-can-ho-luu-tru-ngan-ngay-20250310145929841.htm",
@@ -165,6 +192,37 @@
       },
       {
         "text": "Indonesia",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Tesla bị nghi gian lận để lấy tiền hỗ trợ mua xe điện",
+    "content": "Tesla đang bị điều tra vì nghi ngờ gian lận để nhận tiền hỗ trợ mua xe điện tại Canada. Một đại lý của Tesla đã nộp hơn 4.000 đơn yêu cầu hoàn tiền chỉ trong một tuần, điều này khiến nhiều người hoài nghi về tính khả thi của con số này. Chương trình khuyến khích xe điện của Canada dự kiến kết thúc vào tháng 3, nhưng có thông tin cho rằng một số đại lý không nhận được hoàn tiền cho các xe đã giao.",
+    "link": "https://vnexpress.net/tesla-bi-nghi-gian-lan-de-lay-tien-ho-tro-mua-xe-dien-4859080.html",
+    "cat": "kinh-doanh",
+    "positivity": 3,
+    "importance": 8,
+    "question": "Tesla có bị nghi ngờ gian lận để lấy tiền hỗ trợ mua xe điện ở đâu không?",
+    "answers": [
+      {
+        "text": "Có, ở Canada",
+        "correct": true
+      },
+      {
+        "text": "Có, ở Mỹ",
+        "correct": false
+      },
+      {
+        "text": "Có, ở Anh",
+        "correct": false
+      },
+      {
+        "text": "Không, không có nghi ngờ nào",
+        "correct": false
+      },
+      {
+        "text": "Có, ở Australia",
         "correct": false
       }
     ]
@@ -734,32 +792,28 @@
     ]
   },
   {
-    "title": "PVcomBank ưu đãi với lãi suất chưa đến 4%/năm",
-    "content": "Ngân hàng TMCP Đại Chúng Việt Nam (PVcomBank) vừa công bố gói tín dụng ưu đãi mang tên 'Hành trình mới, sống trọn ước mơ' với lãi suất chỉ từ 3,99%/năm. Gói vay này được áp dụng cho cá nhân có nhu cầu mua nhà và hộ kinh doanh, với hạn mức vay lên đến 85% giá trị tài sản và thời gian vay tối đa 35 năm. PVcomBank cũng cam kết đơn giản hóa thủ tục và linh hoạt trong việc chứng minh thu nhập để giúp khách hàng dễ dàng tiếp cận nguồn vốn.",
-    "link": "https://tuoitre.vn/pvcombank-uu-dai-voi-lai-suat-chua-den-4-nam-20250310115138353.htm",
-    "cat": "kinh-doanh",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Gói tín dụng ưu đãi của PVcomBank có lãi suất bao nhiêu?",
+    "title": "Cúm ảnh hưởng công việc thế nào?",
+    "content": "Bệnh cúm có thể ảnh hưởng nghiêm trọng đến sức khỏe và hiệu suất làm việc của người lao động. Khi mắc cúm, người lao động thường phải nghỉ làm, gây gián đoạn trong sản xuất và cung ứng. Sự gia tăng ca mắc cúm trong doanh nghiệp có thể dẫn đến tổn thất kinh tế lớn, với hàng tỷ USD mất mát mỗi năm. Để giảm thiểu tác động của cúm, việc tiêm vaccine hàng năm là rất cần thiết.",
+    "link": "https://vnexpress.net/cum-anh-huong-cong-viec-the-nao-4859106.html",
+    "cat": "suc-khoe",
+    "positivity": 4,
+    "importance": 8,
+    "question": "Bệnh cúm ảnh hưởng đến công việc như thế nào?",
     "answers": [
       {
-        "text": "3,99%/năm",
+        "text": "Cúm làm giảm hiệu suất lao động và gây gián đoạn sản xuất.",
         "correct": true
       },
       {
-        "text": "4,5%/năm",
+        "text": "Cúm không ảnh hưởng gì đến công việc.",
         "correct": false
       },
       {
-        "text": "5,0%/năm",
+        "text": "Cúm chỉ gây ra mệt mỏi nhưng không cần nghỉ làm.",
         "correct": false
       },
       {
-        "text": "2,5%/năm",
-        "correct": false
-      },
-      {
-        "text": "4,0%/năm",
+        "text": "Cúm chỉ ảnh hưởng đến sức khỏe cá nhân, không liên quan đến công việc.",
         "correct": false
       }
     ]
@@ -792,28 +846,32 @@
     ]
   },
   {
-    "title": "Cúm ảnh hưởng công việc thế nào?",
-    "content": "Bệnh cúm có thể ảnh hưởng nghiêm trọng đến sức khỏe và hiệu suất làm việc của người lao động. Khi mắc cúm, người lao động thường phải nghỉ làm, gây gián đoạn trong sản xuất và cung ứng. Sự gia tăng ca mắc cúm trong doanh nghiệp có thể dẫn đến tổn thất kinh tế lớn, với hàng tỷ USD mất mát mỗi năm. Để giảm thiểu tác động của cúm, việc tiêm vaccine hàng năm là rất cần thiết.",
-    "link": "https://vnexpress.net/cum-anh-huong-cong-viec-the-nao-4859106.html",
-    "cat": "suc-khoe",
-    "positivity": 4,
-    "importance": 8,
-    "question": "Bệnh cúm ảnh hưởng đến công việc như thế nào?",
+    "title": "PVcomBank ưu đãi với lãi suất chưa đến 4%/năm",
+    "content": "Ngân hàng TMCP Đại Chúng Việt Nam (PVcomBank) vừa công bố gói tín dụng ưu đãi mang tên 'Hành trình mới, sống trọn ước mơ' với lãi suất chỉ từ 3,99%/năm. Gói vay này được áp dụng cho cá nhân có nhu cầu mua nhà và hộ kinh doanh, với hạn mức vay lên đến 85% giá trị tài sản và thời gian vay tối đa 35 năm. PVcomBank cũng cam kết đơn giản hóa thủ tục và linh hoạt trong việc chứng minh thu nhập để giúp khách hàng dễ dàng tiếp cận nguồn vốn.",
+    "link": "https://tuoitre.vn/pvcombank-uu-dai-voi-lai-suat-chua-den-4-nam-20250310115138353.htm",
+    "cat": "kinh-doanh",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Gói tín dụng ưu đãi của PVcomBank có lãi suất bao nhiêu?",
     "answers": [
       {
-        "text": "Cúm làm giảm hiệu suất lao động và gây gián đoạn sản xuất.",
+        "text": "3,99%/năm",
         "correct": true
       },
       {
-        "text": "Cúm không ảnh hưởng gì đến công việc.",
+        "text": "4,5%/năm",
         "correct": false
       },
       {
-        "text": "Cúm chỉ gây ra mệt mỏi nhưng không cần nghỉ làm.",
+        "text": "5,0%/năm",
         "correct": false
       },
       {
-        "text": "Cúm chỉ ảnh hưởng đến sức khỏe cá nhân, không liên quan đến công việc.",
+        "text": "2,5%/năm",
+        "correct": false
+      },
+      {
+        "text": "4,0%/năm",
         "correct": false
       }
     ]
