--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -471,6 +471,37 @@
     */
     const newsData = [
   {
+    "title": "Đường Suối Cái - Rạch Vẹm đưa khách thẳng đến vương quốc sao biển",
+    "content": "Đường Suối Cái - Rạch Vẹm ở xã Gành Dầu, TP Phú Quốc đã hoàn thành và chính thức đưa vào sử dụng, tạo điều kiện thuận lợi cho du khách đến với Rạch Vẹm, nổi tiếng với vương quốc sao biển. Tuyến đường có chiều dài khoảng 6,5 km, giúp cải thiện giao thông và thu hút nhiều khách du lịch quốc tế. Công trình này không chỉ phục vụ cho du khách mà còn giúp người dân địa phương dễ dàng di chuyển hơn.",
+    "link": "https://tuoitre.vn/duong-suoi-cai-rach-vem-dua-khach-thang-den-vuong-quoc-sao-bien-20250310153855179.htm",
+    "cat": "du-lich",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Đường Suối Cái - Rạch Vẹm phục vụ cho mục đích gì?",
+    "answers": [
+      {
+        "text": "Đưa khách đến Rạch Vẹm tham quan sao biển",
+        "correct": true
+      },
+      {
+        "text": "Dùng để vận chuyển hàng hóa",
+        "correct": false
+      },
+      {
+        "text": "Chỉ phục vụ cho người dân địa phương",
+        "correct": false
+      },
+      {
+        "text": "Dùng để xây dựng khu nghỉ dưỡng",
+        "correct": false
+      },
+      {
+        "text": "Thay thế cho hệ thống giao thông công cộng",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Quá khứ bất hảo của Tuấn 'trắng'",
     "content": "Nguyễn Văn Tuấn, còn gọi là Tuấn 'trắng', đã bị Công an tỉnh Phú Thọ bắt tạm giam vì tội lạm dụng tín nhiệm chiếm đoạt tài sản. Trước khi bị bắt, Tuấn có nhiều tiền án và tiền sự, bao gồm các hành vi vi phạm pháp luật gây bức xúc cho cộng đồng. Ông ta được xác định là cầm đầu một nhóm giải quyết mâu thuẫn cá nhân bằng vũ lực tại Lào Cai và đã từng có những hành vi liên quan đến mại dâm.",
     "link": "https://tuoitre.vn/qua-khu-bat-hao-cua-tuan-trang-20250310154347664.htm",
@@ -502,28 +533,28 @@
     ]
   },
   {
-    "title": "Những thắc mắc thường gặp về dậy thì ở bé gái",
-    "content": "Bài viết cung cấp thông tin về những thắc mắc thường gặp ở bé gái trong giai đoạn dậy thì, từ 9 đến 13 tuổi. Các thay đổi cơ thể như sự phát triển của ngực, tăng chiều cao, và sự xuất hiện của mụn trứng cá được đề cập. Những câu hỏi phổ biến như lý do đổ mồ hôi nhiều, sự phát triển của ngực, và tình trạng tăng cân cũng được giải thích. Đặc biệt, bài viết nhấn mạnh rằng những thay đổi này là bình thường và trẻ nên giữ gìn vệ sinh và tham khảo ý kiến bác sĩ khi cần.",
-    "link": "https://vnexpress.net/nhung-thac-mac-thuong-gap-ve-day-thi-o-be-gai-4858975.html",
+    "title": "Chữa bàn chân bẹt cho trẻ 9 tuổi được không?",
+    "content": "Bài viết cung cấp thông tin về tình trạng bàn chân bẹt ở trẻ em và khả năng điều trị cho trẻ 9 tuổi. Bàn chân bẹt là tình trạng không có độ lõm ở lòng bàn chân, có thể gây đau nhức và ảnh hưởng đến các bộ phận khác của cơ thể. Phương pháp điều trị thường được khuyên là sử dụng đế chỉnh hình kết hợp với vật lý trị liệu, giúp tái tạo vòm bàn chân và ngăn ngừa biến chứng. Cha mẹ nên đưa trẻ đến bệnh viện để được khám và điều trị phù hợp.",
+    "link": "https://vnexpress.net/chua-ban-chan-bet-cho-tre-9-tuoi-duoc-khong-4859115.html",
     "cat": "suc-khoe",
     "positivity": 8,
     "importance": 7,
-    "question": "Bé gái thường gặp phải những thay đổi gì trong giai đoạn dậy thì?",
+    "question": "Có thể chữa bàn chân bẹt cho trẻ 9 tuổi bằng đế chỉnh hình không?",
     "answers": [
       {
-        "text": "Sự phát triển của ngực, tăng chiều cao và nổi mụn trứng cá.",
+        "text": "Có, sử dụng đế chỉnh hình kết hợp vật lý trị liệu.",
         "correct": true
       },
       {
-        "text": "Chỉ tăng cân mà không có sự thay đổi khác.",
+        "text": "Không, bàn chân bẹt không thể chữa trị.",
         "correct": false
       },
       {
-        "text": "Chỉ phát triển chiều cao mà không có sự thay đổi nào khác.",
+        "text": "Chỉ có thể phẫu thuật khi trẻ lớn hơn.",
         "correct": false
       },
       {
-        "text": "Không có sự thay đổi nào trong giai đoạn dậy thì.",
+        "text": "Bàn chân bẹt sẽ tự khỏi mà không cần điều trị.",
         "correct": false
       }
     ]
@@ -556,28 +587,28 @@
     ]
   },
   {
-    "title": "Chữa bàn chân bẹt cho trẻ 9 tuổi được không?",
-    "content": "Bài viết cung cấp thông tin về tình trạng bàn chân bẹt ở trẻ em và khả năng điều trị cho trẻ 9 tuổi. Bàn chân bẹt là tình trạng không có độ lõm ở lòng bàn chân, có thể gây đau nhức và ảnh hưởng đến các bộ phận khác của cơ thể. Phương pháp điều trị thường được khuyên là sử dụng đế chỉnh hình kết hợp với vật lý trị liệu, giúp tái tạo vòm bàn chân và ngăn ngừa biến chứng. Cha mẹ nên đưa trẻ đến bệnh viện để được khám và điều trị phù hợp.",
-    "link": "https://vnexpress.net/chua-ban-chan-bet-cho-tre-9-tuoi-duoc-khong-4859115.html",
+    "title": "Những thắc mắc thường gặp về dậy thì ở bé gái",
+    "content": "Bài viết cung cấp thông tin về những thắc mắc thường gặp ở bé gái trong giai đoạn dậy thì, từ 9 đến 13 tuổi. Các thay đổi cơ thể như sự phát triển của ngực, tăng chiều cao, và sự xuất hiện của mụn trứng cá được đề cập. Những câu hỏi phổ biến như lý do đổ mồ hôi nhiều, sự phát triển của ngực, và tình trạng tăng cân cũng được giải thích. Đặc biệt, bài viết nhấn mạnh rằng những thay đổi này là bình thường và trẻ nên giữ gìn vệ sinh và tham khảo ý kiến bác sĩ khi cần.",
+    "link": "https://vnexpress.net/nhung-thac-mac-thuong-gap-ve-day-thi-o-be-gai-4858975.html",
     "cat": "suc-khoe",
     "positivity": 8,
     "importance": 7,
-    "question": "Có thể chữa bàn chân bẹt cho trẻ 9 tuổi bằng đế chỉnh hình không?",
+    "question": "Bé gái thường gặp phải những thay đổi gì trong giai đoạn dậy thì?",
     "answers": [
       {
-        "text": "Có, sử dụng đế chỉnh hình kết hợp vật lý trị liệu.",
+        "text": "Sự phát triển của ngực, tăng chiều cao và nổi mụn trứng cá.",
         "correct": true
       },
       {
-        "text": "Không, bàn chân bẹt không thể chữa trị.",
+        "text": "Chỉ tăng cân mà không có sự thay đổi khác.",
         "correct": false
       },
       {
-        "text": "Chỉ có thể phẫu thuật khi trẻ lớn hơn.",
+        "text": "Chỉ phát triển chiều cao mà không có sự thay đổi nào khác.",
         "correct": false
       },
       {
-        "text": "Bàn chân bẹt sẽ tự khỏi mà không cần điều trị.",
+        "text": "Không có sự thay đổi nào trong giai đoạn dậy thì.",
         "correct": false
       }
     ]
@@ -1321,6 +1352,33 @@
     ]
   },
   {
+    "title": "Cúm ảnh hưởng công việc thế nào?",
+    "content": "Bệnh cúm có thể ảnh hưởng nghiêm trọng đến sức khỏe và hiệu suất làm việc của người lao động. Khi mắc cúm, người lao động thường phải nghỉ làm, gây gián đoạn trong sản xuất và cung ứng. Sự gia tăng ca mắc cúm trong doanh nghiệp có thể dẫn đến tổn thất kinh tế lớn, với hàng tỷ USD mất mát mỗi năm. Để giảm thiểu tác động của cúm, việc tiêm vaccine hàng năm là rất cần thiết.",
+    "link": "https://vnexpress.net/cum-anh-huong-cong-viec-the-nao-4859106.html",
+    "cat": "suc-khoe",
+    "positivity": 4,
+    "importance": 8,
+    "question": "Bệnh cúm ảnh hưởng đến công việc như thế nào?",
+    "answers": [
+      {
+        "text": "Cúm làm giảm hiệu suất lao động và gây gián đoạn sản xuất.",
+        "correct": true
+      },
+      {
+        "text": "Cúm không ảnh hưởng gì đến công việc.",
+        "correct": false
+      },
+      {
+        "text": "Cúm chỉ gây ra mệt mỏi nhưng không cần nghỉ làm.",
+        "correct": false
+      },
+      {
+        "text": "Cúm chỉ ảnh hưởng đến sức khỏe cá nhân, không liên quan đến công việc.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Vì sao người bị rối loạn tiền đình dễ say xe?",
     "content": "Người bị rối loạn tiền đình thường dễ bị say xe do sự không đồng nhất giữa thông tin từ mắt và cảm giác từ cơ quan tiền đình trong tai. Khi cơ thể di chuyển, nếu não nhận thông tin mắt thấy người ngồi yên nhưng tai lại cảm nhận chuyển động, sẽ gây ra triệu chứng như chóng mặt và buồn nôn. Để cải thiện tình trạng này, bệnh nhân nên chọn vị trí ngồi hợp lý khi di chuyển và có thể sử dụng một số mẹo như nhìn vào chân trời hoặc ngửi mùi hương từ vỏ cam, chanh. Nếu triệu chứng nặng, cần tham khảo ý kiến bác sĩ để được kiểm tra và điều trị thích hợp.",
     "link": "https://vnexpress.net/vi-sao-nguoi-bi-roi-loan-tien-dinh-de-say-xe-4859081.html",
@@ -1374,33 +1432,6 @@
       },
       {
         "text": "4,0%/năm",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Cúm ảnh hưởng công việc thế nào?",
-    "content": "Bệnh cúm có thể ảnh hưởng nghiêm trọng đến sức khỏe và hiệu suất làm việc của người lao động. Khi mắc cúm, người lao động thường phải nghỉ làm, gây gián đoạn trong sản xuất và cung ứng. Sự gia tăng ca mắc cúm trong doanh nghiệp có thể dẫn đến tổn thất kinh tế lớn, với hàng tỷ USD mất mát mỗi năm. Để giảm thiểu tác động của cúm, việc tiêm vaccine hàng năm là rất cần thiết.",
-    "link": "https://vnexpress.net/cum-anh-huong-cong-viec-the-nao-4859106.html",
-    "cat": "suc-khoe",
-    "positivity": 4,
-    "importance": 8,
-    "question": "Bệnh cúm ảnh hưởng đến công việc như thế nào?",
-    "answers": [
-      {
-        "text": "Cúm làm giảm hiệu suất lao động và gây gián đoạn sản xuất.",
-        "correct": true
-      },
-      {
-        "text": "Cúm không ảnh hưởng gì đến công việc.",
-        "correct": false
-      },
-      {
-        "text": "Cúm chỉ gây ra mệt mỏi nhưng không cần nghỉ làm.",
-        "correct": false
-      },
-      {
-        "text": "Cúm chỉ ảnh hưởng đến sức khỏe cá nhân, không liên quan đến công việc.",
         "correct": false
       }
     ]
