--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -471,6 +471,64 @@
     */
     const newsData = [
   {
+    "title": "Runner Hà Lan ngã đập đầu, bất tỉnh tại giải châu Âu",
+    "content": "Tại giải vô địch điền kinh trong nhà châu Âu diễn ra ở Apeldoorn, Hà Lan, vận động viên 32 tuổi Maureen Koster đã bị ngã và bất tỉnh sau khi va chạm với hai đối thủ trong chung kết 3.000m nữ. Cô đã được sơ cứu ngay lập tức và được đưa đến bệnh viện. May mắn thay, Koster đã hồi tỉnh sau khi được điều trị. Các đồng nghiệp và khán giả đã bày tỏ sự lo lắng cho tình trạng của cô trong suốt sự cố.",
+    "link": "https://vnexpress.net/runner-ha-lan-nga-dap-dau-bat-tinh-tai-giai-chau-au-4859234.html",
+    "cat": "the-thao",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Maureen Koster đã gặp tai nạn gì tại giải vô địch điền kinh trong nhà châu Âu?",
+    "answers": [
+      {
+        "text": "Cô ngã và đập đầu bất tỉnh.",
+        "correct": true
+      },
+      {
+        "text": "Cô giành huy chương vàng.",
+        "correct": false
+      },
+      {
+        "text": "Cô bỏ cuộc giữa chừng.",
+        "correct": false
+      },
+      {
+        "text": "Cô bị thương ở chân.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Phó Thủ tướng động thổ khu công nghiệp hơn 300ha ở Đắk Lắk",
+    "content": "Vào chiều ngày 10-3, Phó Thủ tướng Trần Hồng Hà đã tham dự lễ động thổ khu công nghiệp Phú Xuân tại Đắk Lắk, có quy mô hơn 313ha. Đây được xem là cột mốc quan trọng cho sự phát triển công nghiệp của tỉnh, nhằm thu hút doanh nghiệp công nghệ cao vào khu vực Tây Nguyên. Dự án đã được phê duyệt từ cuối năm 2024 và sẽ tập trung vào các ngành chế biến nông sản và công nghiệp xanh, bền vững.",
+    "link": "https://tuoitre.vn/pho-thu-tuong-dong-tho-khu-cong-nghiep-hon-300ha-o-dak-lak-20250310153641315.htm",
+    "cat": "kinh-doanh",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Khu công nghiệp nào đã được động thổ ở Đắk Lắk vào ngày 10-3?",
+    "answers": [
+      {
+        "text": "Khu công nghiệp Phú Xuân",
+        "correct": true
+      },
+      {
+        "text": "Khu công nghiệp Hòa Ninh",
+        "correct": false
+      },
+      {
+        "text": "Khu công nghiệp Hiệp Phước",
+        "correct": false
+      },
+      {
+        "text": "Khu công nghiệp Bình Dương",
+        "correct": false
+      },
+      {
+        "text": "Khu công nghiệp Liên Chiểu",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Nhóm ‘bà chủ’ lãnh án tù về tội cưỡng đoạt tài sản 2 nữ nhân viên",
     "content": "Nhóm ‘bà chủ’ tại Đà Nẵng gồm bốn người đã bị tuyên án tù vì tội cưỡng đoạt tài sản từ hai nữ nhân viên. Họ đã đe dọa và uy hiếp tinh thần các nhân viên để chiếm đoạt 587 triệu đồng, mặc dù chưa thực sự chiếm đoạt được số tiền này. Tòa án đã xác định hành vi của họ là phạm tội và tuyên án 5 năm tù cho hai bị cáo và 4 năm cho hai bị cáo còn lại. Các bị cáo đã thừa nhận hành vi của mình và cho rằng họ không nhận thức được hành vi này là phạm pháp.",
     "link": "https://tuoitre.vn/nhom-ba-chu-lanh-an-tu-ve-toi-cuong-doat-tai-san-2-nu-nhan-vien-20250310155938252.htm",
@@ -1414,37 +1472,6 @@
     ]
   },
   {
-    "title": "PVcomBank ưu đãi với lãi suất chưa đến 4%/năm",
-    "content": "Ngân hàng TMCP Đại Chúng Việt Nam (PVcomBank) vừa công bố gói tín dụng ưu đãi mang tên 'Hành trình mới, sống trọn ước mơ' với lãi suất chỉ từ 3,99%/năm. Gói vay này được áp dụng cho cá nhân có nhu cầu mua nhà và hộ kinh doanh, với hạn mức vay lên đến 85% giá trị tài sản và thời gian vay tối đa 35 năm. PVcomBank cũng cam kết đơn giản hóa thủ tục và linh hoạt trong việc chứng minh thu nhập để giúp khách hàng dễ dàng tiếp cận nguồn vốn.",
-    "link": "https://tuoitre.vn/pvcombank-uu-dai-voi-lai-suat-chua-den-4-nam-20250310115138353.htm",
-    "cat": "kinh-doanh",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Gói tín dụng ưu đãi của PVcomBank có lãi suất bao nhiêu?",
-    "answers": [
-      {
-        "text": "3,99%/năm",
-        "correct": true
-      },
-      {
-        "text": "4,5%/năm",
-        "correct": false
-      },
-      {
-        "text": "5,0%/năm",
-        "correct": false
-      },
-      {
-        "text": "2,5%/năm",
-        "correct": false
-      },
-      {
-        "text": "4,0%/năm",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Cúm ảnh hưởng công việc thế nào?",
     "content": "Bệnh cúm có thể ảnh hưởng nghiêm trọng đến sức khỏe và hiệu suất làm việc của người lao động. Khi mắc cúm, người lao động thường phải nghỉ làm, gây gián đoạn trong sản xuất và cung ứng. Sự gia tăng ca mắc cúm trong doanh nghiệp có thể dẫn đến tổn thất kinh tế lớn, với hàng tỷ USD mất mát mỗi năm. Để giảm thiểu tác động của cúm, việc tiêm vaccine hàng năm là rất cần thiết.",
     "link": "https://vnexpress.net/cum-anh-huong-cong-viec-the-nao-4859106.html",
@@ -1494,6 +1521,37 @@
       },
       {
         "text": "Vì họ yếu sinh lý.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "PVcomBank ưu đãi với lãi suất chưa đến 4%/năm",
+    "content": "Ngân hàng TMCP Đại Chúng Việt Nam (PVcomBank) vừa công bố gói tín dụng ưu đãi mang tên 'Hành trình mới, sống trọn ước mơ' với lãi suất chỉ từ 3,99%/năm. Gói vay này được áp dụng cho cá nhân có nhu cầu mua nhà và hộ kinh doanh, với hạn mức vay lên đến 85% giá trị tài sản và thời gian vay tối đa 35 năm. PVcomBank cũng cam kết đơn giản hóa thủ tục và linh hoạt trong việc chứng minh thu nhập để giúp khách hàng dễ dàng tiếp cận nguồn vốn.",
+    "link": "https://tuoitre.vn/pvcombank-uu-dai-voi-lai-suat-chua-den-4-nam-20250310115138353.htm",
+    "cat": "kinh-doanh",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Gói tín dụng ưu đãi của PVcomBank có lãi suất bao nhiêu?",
+    "answers": [
+      {
+        "text": "3,99%/năm",
+        "correct": true
+      },
+      {
+        "text": "4,5%/năm",
+        "correct": false
+      },
+      {
+        "text": "5,0%/năm",
+        "correct": false
+      },
+      {
+        "text": "2,5%/năm",
+        "correct": false
+      },
+      {
+        "text": "4,0%/năm",
         "correct": false
       }
     ]
@@ -1971,6 +2029,33 @@
     ]
   },
   {
+    "title": "Tê tay có phải dấu hiệu đột quỵ?",
+    "content": "Tê tay có thể xuất phát từ nhiều nguyên nhân khác nhau, nhưng nó cũng có thể là dấu hiệu cảnh báo đột quỵ. Việc nhận biết sớm các triệu chứng này cực kỳ quan trọng để tránh những biến chứng nguy hiểm. Bài viết nhấn mạnh tầm quan trọng của việc theo dõi các dấu hiệu để có phản ứng kịp thời.",
+    "link": "https://vnexpress.net/te-tay-co-phai-dau-hieu-dot-quy-4858950.html",
+    "cat": "suc-khoe",
+    "positivity": 6,
+    "importance": 8,
+    "question": "Tê tay có phải là dấu hiệu của đột quỵ không?",
+    "answers": [
+      {
+        "text": "Có, tê tay có thể là dấu hiệu của đột quỵ.",
+        "correct": true
+      },
+      {
+        "text": "Không, tê tay chỉ là triệu chứng bình thường.",
+        "correct": false
+      },
+      {
+        "text": "Có, nhưng nó không liên quan đến sức khỏe.",
+        "correct": false
+      },
+      {
+        "text": "Không, tê tay không ảnh hưởng đến đột quỵ.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Hàng chục chiếc VF 3 dạo phố trước cuộc thi của VinFast",
     "content": "Vào ngày Quốc tế phụ nữ 8/3, một nhóm hơn 40 nữ chủ xe VF 3 đã tổ chức một cuộc diễu hành qua các tuyến phố Hà Nội để quảng bá cho cuộc thi \"Sáng tạo chất riêng, Độc bản cá tính\" do VinFast tổ chức. Những chiếc xe VF 3 được cá nhân hóa với nhiều màu sắc và phong cách khác nhau đã thu hút sự chú ý của đông đảo người dân. Sự kiện này không chỉ là dịp để các chị em giao lưu mà còn lan tỏa cảm hứng sáng tạo trong cộng đồng. Cuộc thi sẽ diễn ra vào ngày 22/3 tại nhiều thành phố lớn, với tổng giá trị giải thưởng lên tới 650 triệu đồng.",
     "link": "https://vnexpress.net/hang-chuc-chiec-vf-3-dao-pho-truoc-cuoc-thi-cua-vinfast-4859032.html",
@@ -1997,33 +2082,6 @@
       },
       {
         "text": "1/3",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Tê tay có phải dấu hiệu đột quỵ?",
-    "content": "Tê tay có thể xuất phát từ nhiều nguyên nhân khác nhau, nhưng nó cũng có thể là dấu hiệu cảnh báo đột quỵ. Việc nhận biết sớm các triệu chứng này cực kỳ quan trọng để tránh những biến chứng nguy hiểm. Bài viết nhấn mạnh tầm quan trọng của việc theo dõi các dấu hiệu để có phản ứng kịp thời.",
-    "link": "https://vnexpress.net/te-tay-co-phai-dau-hieu-dot-quy-4858950.html",
-    "cat": "suc-khoe",
-    "positivity": 6,
-    "importance": 8,
-    "question": "Tê tay có phải là dấu hiệu của đột quỵ không?",
-    "answers": [
-      {
-        "text": "Có, tê tay có thể là dấu hiệu của đột quỵ.",
-        "correct": true
-      },
-      {
-        "text": "Không, tê tay chỉ là triệu chứng bình thường.",
-        "correct": false
-      },
-      {
-        "text": "Có, nhưng nó không liên quan đến sức khỏe.",
-        "correct": false
-      },
-      {
-        "text": "Không, tê tay không ảnh hưởng đến đột quỵ.",
         "correct": false
       }
     ]
