--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -139,6 +139,33 @@
     ]
   },
   {
+    "title": "10 ôtô bán ít nhất thị trường Việt Nam tháng 2",
+    "content": "Báo cáo doanh số ô tô tháng 2/2025 cho thấy Toyota Land Cruiser và Honda Accord là hai mẫu xe bán ít nhất tại thị trường Việt Nam, với chỉ 2 xe được bàn giao cho mỗi mẫu. Sự sụt giảm doanh số so với tháng trước rất rõ ràng, khi Land Cruiser đã bán 17 xe trong tháng 1 và Accord bán 5 xe. Ngoài hai mẫu xe này, Kia K5, Mitsubishi Pajero Sport, và Isuzu mu-X cũng nằm trong danh sách những xe có doanh số thấp trong tháng 2.",
+    "link": "https://vnexpress.net/oto-xe-may/v-car/doanh-so/10-oto-ban-it-nhat-thi-truong-viet-nam-thang-2-4858749.html",
+    "cat": "oto-xe-may",
+    "positivity": 3,
+    "importance": 6,
+    "question": "Những ô tô nào bán ít nhất tại thị trường Việt Nam tháng 2/2025?",
+    "answers": [
+      {
+        "text": "Toyota Land Cruiser và Honda Accord",
+        "correct": true
+      },
+      {
+        "text": "Kia K5 và Mitsubishi Pajero Sport",
+        "correct": false
+      },
+      {
+        "text": "Isuzu mu-X và Toyota Corolla Altis",
+        "correct": false
+      },
+      {
+        "text": "Mazda6 và Suzuki Jimny",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Nhóm ‘bà chủ’ lãnh án tù về tội cưỡng đoạt tài sản 2 nữ nhân viên",
     "content": "Nhóm ‘bà chủ’ tại Đà Nẵng gồm bốn người đã bị tuyên án tù vì tội cưỡng đoạt tài sản từ hai nữ nhân viên. Họ đã đe dọa và uy hiếp tinh thần các nhân viên để chiếm đoạt 587 triệu đồng, mặc dù chưa thực sự chiếm đoạt được số tiền này. Tòa án đã xác định hành vi của họ là phạm tội và tuyên án 5 năm tù cho hai bị cáo và 4 năm cho hai bị cáo còn lại. Các bị cáo đã thừa nhận hành vi của mình và cho rằng họ không nhận thức được hành vi này là phạm pháp.",
     "link": "https://tuoitre.vn/nhom-ba-chu-lanh-an-tu-ve-toi-cuong-doat-tai-san-2-nu-nhan-vien-20250310155938252.htm",
@@ -165,6 +192,33 @@
       },
       {
         "text": "Đánh bạc",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "MG4 EV đời 2024 giảm giá gần 300 triệu đồng",
+    "content": "Mẫu xe MG4 EV đời 2024 vừa được giảm giá mạnh, gần 300 triệu đồng, khiến giá giao dịch hiện tại chỉ còn khoảng 650 triệu đồng so với mức giá gốc 948 triệu đồng. Đây là mức giảm cao nhất trong phân khúc xe phổ thông cỡ B tại Việt Nam. Các đại lý đưa ra khuyến mãi này nhằm đẩy hàng nhanh và có thể là do xe thuộc diện nhà máy thưởng cho đại lý. Mặc dù mức giảm này không hiếm gặp trong thị trường ôtô Việt, nhưng nó thực sự nổi bật trong phân khúc này.",
+    "link": "https://vnexpress.net/mg4-ev-doi-2024-giam-gia-gan-300-trieu-dong-4859159.html",
+    "cat": "oto-xe-may",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Tại sao MG4 EV đời 2024 lại giảm giá gần 300 triệu đồng?",
+    "answers": [
+      {
+        "text": "Do đại lý muốn đẩy hàng nhanh",
+        "correct": true
+      },
+      {
+        "text": "Chính sách từ nhà sản xuất",
+        "correct": false
+      },
+      {
+        "text": "Do cạnh tranh với các hãng xe khác",
+        "correct": false
+      },
+      {
+        "text": "Giá trị thương hiệu giảm",
         "correct": false
       }
     ]
@@ -1082,28 +1136,32 @@
     ]
   },
   {
-    "title": "Cúm ảnh hưởng công việc thế nào?",
-    "content": "Bệnh cúm có thể ảnh hưởng nghiêm trọng đến sức khỏe và hiệu suất làm việc của người lao động. Khi mắc cúm, người lao động thường phải nghỉ làm, gây gián đoạn trong sản xuất và cung ứng. Sự gia tăng ca mắc cúm trong doanh nghiệp có thể dẫn đến tổn thất kinh tế lớn, với hàng tỷ USD mất mát mỗi năm. Để giảm thiểu tác động của cúm, việc tiêm vaccine hàng năm là rất cần thiết.",
-    "link": "https://vnexpress.net/cum-anh-huong-cong-viec-the-nao-4859106.html",
-    "cat": "suc-khoe",
-    "positivity": 4,
-    "importance": 8,
-    "question": "Bệnh cúm ảnh hưởng đến công việc như thế nào?",
+    "title": "PVcomBank ưu đãi với lãi suất chưa đến 4%/năm",
+    "content": "Ngân hàng TMCP Đại Chúng Việt Nam (PVcomBank) vừa công bố gói tín dụng ưu đãi mang tên 'Hành trình mới, sống trọn ước mơ' với lãi suất chỉ từ 3,99%/năm. Gói vay này được áp dụng cho cá nhân có nhu cầu mua nhà và hộ kinh doanh, với hạn mức vay lên đến 85% giá trị tài sản và thời gian vay tối đa 35 năm. PVcomBank cũng cam kết đơn giản hóa thủ tục và linh hoạt trong việc chứng minh thu nhập để giúp khách hàng dễ dàng tiếp cận nguồn vốn.",
+    "link": "https://tuoitre.vn/pvcombank-uu-dai-voi-lai-suat-chua-den-4-nam-20250310115138353.htm",
+    "cat": "kinh-doanh",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Gói tín dụng ưu đãi của PVcomBank có lãi suất bao nhiêu?",
     "answers": [
       {
-        "text": "Cúm làm giảm hiệu suất lao động và gây gián đoạn sản xuất.",
+        "text": "3,99%/năm",
         "correct": true
       },
       {
-        "text": "Cúm không ảnh hưởng gì đến công việc.",
+        "text": "4,5%/năm",
         "correct": false
       },
       {
-        "text": "Cúm chỉ gây ra mệt mỏi nhưng không cần nghỉ làm.",
+        "text": "5,0%/năm",
         "correct": false
       },
       {
-        "text": "Cúm chỉ ảnh hưởng đến sức khỏe cá nhân, không liên quan đến công việc.",
+        "text": "2,5%/năm",
+        "correct": false
+      },
+      {
+        "text": "4,0%/năm",
         "correct": false
       }
     ]
@@ -1136,32 +1194,28 @@
     ]
   },
   {
-    "title": "PVcomBank ưu đãi với lãi suất chưa đến 4%/năm",
-    "content": "Ngân hàng TMCP Đại Chúng Việt Nam (PVcomBank) vừa công bố gói tín dụng ưu đãi mang tên 'Hành trình mới, sống trọn ước mơ' với lãi suất chỉ từ 3,99%/năm. Gói vay này được áp dụng cho cá nhân có nhu cầu mua nhà và hộ kinh doanh, với hạn mức vay lên đến 85% giá trị tài sản và thời gian vay tối đa 35 năm. PVcomBank cũng cam kết đơn giản hóa thủ tục và linh hoạt trong việc chứng minh thu nhập để giúp khách hàng dễ dàng tiếp cận nguồn vốn.",
-    "link": "https://tuoitre.vn/pvcombank-uu-dai-voi-lai-suat-chua-den-4-nam-20250310115138353.htm",
-    "cat": "kinh-doanh",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Gói tín dụng ưu đãi của PVcomBank có lãi suất bao nhiêu?",
+    "title": "Cúm ảnh hưởng công việc thế nào?",
+    "content": "Bệnh cúm có thể ảnh hưởng nghiêm trọng đến sức khỏe và hiệu suất làm việc của người lao động. Khi mắc cúm, người lao động thường phải nghỉ làm, gây gián đoạn trong sản xuất và cung ứng. Sự gia tăng ca mắc cúm trong doanh nghiệp có thể dẫn đến tổn thất kinh tế lớn, với hàng tỷ USD mất mát mỗi năm. Để giảm thiểu tác động của cúm, việc tiêm vaccine hàng năm là rất cần thiết.",
+    "link": "https://vnexpress.net/cum-anh-huong-cong-viec-the-nao-4859106.html",
+    "cat": "suc-khoe",
+    "positivity": 4,
+    "importance": 8,
+    "question": "Bệnh cúm ảnh hưởng đến công việc như thế nào?",
     "answers": [
       {
-        "text": "3,99%/năm",
+        "text": "Cúm làm giảm hiệu suất lao động và gây gián đoạn sản xuất.",
         "correct": true
       },
       {
-        "text": "4,5%/năm",
+        "text": "Cúm không ảnh hưởng gì đến công việc.",
         "correct": false
       },
       {
-        "text": "5,0%/năm",
+        "text": "Cúm chỉ gây ra mệt mỏi nhưng không cần nghỉ làm.",
         "correct": false
       },
       {
-        "text": "2,5%/năm",
-        "correct": false
-      },
-      {
-        "text": "4,0%/năm",
+        "text": "Cúm chỉ ảnh hưởng đến sức khỏe cá nhân, không liên quan đến công việc.",
         "correct": false
       }
     ]
@@ -1639,33 +1693,6 @@
     ]
   },
   {
-    "title": "Tê tay có phải dấu hiệu đột quỵ?",
-    "content": "Tê tay có thể xuất phát từ nhiều nguyên nhân khác nhau, nhưng nó cũng có thể là dấu hiệu cảnh báo đột quỵ. Việc nhận biết sớm các triệu chứng này cực kỳ quan trọng để tránh những biến chứng nguy hiểm. Bài viết nhấn mạnh tầm quan trọng của việc theo dõi các dấu hiệu để có phản ứng kịp thời.",
-    "link": "https://vnexpress.net/te-tay-co-phai-dau-hieu-dot-quy-4858950.html",
-    "cat": "suc-khoe",
-    "positivity": 6,
-    "importance": 8,
-    "question": "Tê tay có phải là dấu hiệu của đột quỵ không?",
-    "answers": [
-      {
-        "text": "Có, tê tay có thể là dấu hiệu của đột quỵ.",
-        "correct": true
-      },
-      {
-        "text": "Không, tê tay chỉ là triệu chứng bình thường.",
-        "correct": false
-      },
-      {
-        "text": "Có, nhưng nó không liên quan đến sức khỏe.",
-        "correct": false
-      },
-      {
-        "text": "Không, tê tay không ảnh hưởng đến đột quỵ.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Hàng chục chiếc VF 3 dạo phố trước cuộc thi của VinFast",
     "content": "Vào ngày Quốc tế phụ nữ 8/3, một nhóm hơn 40 nữ chủ xe VF 3 đã tổ chức một cuộc diễu hành qua các tuyến phố Hà Nội để quảng bá cho cuộc thi \"Sáng tạo chất riêng, Độc bản cá tính\" do VinFast tổ chức. Những chiếc xe VF 3 được cá nhân hóa với nhiều màu sắc và phong cách khác nhau đã thu hút sự chú ý của đông đảo người dân. Sự kiện này không chỉ là dịp để các chị em giao lưu mà còn lan tỏa cảm hứng sáng tạo trong cộng đồng. Cuộc thi sẽ diễn ra vào ngày 22/3 tại nhiều thành phố lớn, với tổng giá trị giải thưởng lên tới 650 triệu đồng.",
     "link": "https://vnexpress.net/hang-chuc-chiec-vf-3-dao-pho-truoc-cuoc-thi-cua-vinfast-4859032.html",
@@ -1692,6 +1719,33 @@
       },
       {
         "text": "1/3",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Tê tay có phải dấu hiệu đột quỵ?",
+    "content": "Tê tay có thể xuất phát từ nhiều nguyên nhân khác nhau, nhưng nó cũng có thể là dấu hiệu cảnh báo đột quỵ. Việc nhận biết sớm các triệu chứng này cực kỳ quan trọng để tránh những biến chứng nguy hiểm. Bài viết nhấn mạnh tầm quan trọng của việc theo dõi các dấu hiệu để có phản ứng kịp thời.",
+    "link": "https://vnexpress.net/te-tay-co-phai-dau-hieu-dot-quy-4858950.html",
+    "cat": "suc-khoe",
+    "positivity": 6,
+    "importance": 8,
+    "question": "Tê tay có phải là dấu hiệu của đột quỵ không?",
+    "answers": [
+      {
+        "text": "Có, tê tay có thể là dấu hiệu của đột quỵ.",
+        "correct": true
+      },
+      {
+        "text": "Không, tê tay chỉ là triệu chứng bình thường.",
+        "correct": false
+      },
+      {
+        "text": "Có, nhưng nó không liên quan đến sức khỏe.",
+        "correct": false
+      },
+      {
+        "text": "Không, tê tay không ảnh hưởng đến đột quỵ.",
         "correct": false
       }
     ]
@@ -3019,33 +3073,6 @@
     ]
   },
   {
-    "title": "Uống sữa có làm tăng cholesterol?",
-    "content": "Bài viết thảo luận về việc uống sữa và tác động của nó đến mức cholesterol trong cơ thể. Sữa là nguồn dinh dưỡng phong phú, cung cấp nhiều vitamin và khoáng chất, nhưng những người có cholesterol cao cần lựa chọn loại sữa phù hợp để tránh làm tăng chỉ số cholesterol. Việc chọn đúng loại sữa là rất quan trọng để duy trì sức khỏe tim mạch.",
-    "link": "https://vnexpress.net/uong-sua-co-lam-tang-cholesterol-4858799.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 6,
-    "question": "Uống sữa có làm tăng cholesterol không?",
-    "answers": [
-      {
-        "text": "Có, nếu chọn loại không phù hợp.",
-        "correct": true
-      },
-      {
-        "text": "Không, sữa không ảnh hưởng đến cholesterol.",
-        "correct": false
-      },
-      {
-        "text": "Có, tất cả các loại sữa đều làm tăng cholesterol.",
-        "correct": false
-      },
-      {
-        "text": "Không, sữa chỉ tốt cho sức khỏe.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Xây ngân sách kép - cách đầu tư hiệu quả của giám đốc Dragon Capital",
     "content": "Bài viết chia sẻ kinh nghiệm đầu tư và quản lý tài chính của bà Lương Thị Mỹ Hạnh, Giám đốc Quản lý tài sản tại Dragon Capital. Bà Hạnh nhấn mạnh tầm quan trọng của việc hiểu rõ dòng tiền và xây dựng ngân sách cho hiện tại và tương lai. Bà khuyến khích người trẻ bắt đầu đầu tư với số vốn nhỏ và giữ kỷ luật trong việc tích lũy và đầu tư để đạt được tự do tài chính. Bà cũng khuyến nghị phân bổ tài sản theo từng giai đoạn tuổi tác và mục tiêu tài chính cá nhân.",
     "link": "https://vnexpress.net/xay-ngan-sach-kep-cach-dau-tu-hieu-qua-cua-giam-doc-dragon-capital-4856770.html",
@@ -3068,6 +3095,33 @@
       },
       {
         "text": "Chỉ nên đầu tư vào bất động sản ngay lập tức.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Uống sữa có làm tăng cholesterol?",
+    "content": "Bài viết thảo luận về việc uống sữa và tác động của nó đến mức cholesterol trong cơ thể. Sữa là nguồn dinh dưỡng phong phú, cung cấp nhiều vitamin và khoáng chất, nhưng những người có cholesterol cao cần lựa chọn loại sữa phù hợp để tránh làm tăng chỉ số cholesterol. Việc chọn đúng loại sữa là rất quan trọng để duy trì sức khỏe tim mạch.",
+    "link": "https://vnexpress.net/uong-sua-co-lam-tang-cholesterol-4858799.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 6,
+    "question": "Uống sữa có làm tăng cholesterol không?",
+    "answers": [
+      {
+        "text": "Có, nếu chọn loại không phù hợp.",
+        "correct": true
+      },
+      {
+        "text": "Không, sữa không ảnh hưởng đến cholesterol.",
+        "correct": false
+      },
+      {
+        "text": "Có, tất cả các loại sữa đều làm tăng cholesterol.",
+        "correct": false
+      },
+      {
+        "text": "Không, sữa chỉ tốt cho sức khỏe.",
         "correct": false
       }
     ]
@@ -3320,37 +3374,6 @@
     ]
   },
   {
-    "title": "Lexus LX 700h bản giới hạn 10 xe ra mắt",
-    "content": "Lexus vừa ra mắt phiên bản giới hạn LX 700h Hideki Edition kỷ niệm 10 năm chiến thắng của tay golf Hideki Matsuyama. Phiên bản này chỉ sản xuất 10 chiếc, được sơn màu Manganese Luster và trang bị những tính năng cao cấp như hệ thống âm thanh Mark Levinson. Giá bán của phiên bản đặc biệt này tại Nhật Bản là 114.900 USD, cao hơn 7.400 USD so với phiên bản tiêu chuẩn.",
-    "link": "https://vnexpress.net/lexus-lx-700h-ban-gioi-han-10-xe-ra-mat-4858775.html",
-    "cat": "oto-xe-may",
-    "positivity": 9,
-    "importance": 7,
-    "question": "Phiên bản Lexus LX 700h Hideki Edition có bao nhiêu xe được sản xuất?",
-    "answers": [
-      {
-        "text": "10 xe",
-        "correct": true
-      },
-      {
-        "text": "20 xe",
-        "correct": false
-      },
-      {
-        "text": "15 xe",
-        "correct": false
-      },
-      {
-        "text": "5 xe",
-        "correct": false
-      },
-      {
-        "text": "12 xe",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "3 tháng sống như \"người điên\" và hành trình giành học bổng Mỹ",
     "content": "Hà Thảo Trang, sinh viên năm 3 Học viện Ngoại giao, đã giành được học bổng Global Undergraduate Exchange Program trị giá 30.000 USD để du học Mỹ. Cô đã dành ba tháng cuối năm 2023 để chuẩn bị hồ sơ và bài luận, trong một khoảng thời gian mà cô tự mô tả là sống như \"người điên\" vì quyết tâm theo đuổi giấc mơ du học. Thảo Trang không chỉ xuất sắc trong học tập mà còn tích cực tham gia nhiều hoạt động ngoại khóa, giúp cô có thêm kinh nghiệm và tự tin hơn trong việc giao tiếp bằng tiếng Anh.",
     "link": "https://dantri.com.vn/giao-duc/3-thang-song-nhu-nguoi-dien-va-hanh-trinh-gianh-hoc-bong-my-20250309092058514.htm",
@@ -3377,6 +3400,37 @@
       },
       {
         "text": "Cô đã nộp hồ sơ vào nhiều trường khác.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Lexus LX 700h bản giới hạn 10 xe ra mắt",
+    "content": "Lexus vừa ra mắt phiên bản giới hạn LX 700h Hideki Edition kỷ niệm 10 năm chiến thắng của tay golf Hideki Matsuyama. Phiên bản này chỉ sản xuất 10 chiếc, được sơn màu Manganese Luster và trang bị những tính năng cao cấp như hệ thống âm thanh Mark Levinson. Giá bán của phiên bản đặc biệt này tại Nhật Bản là 114.900 USD, cao hơn 7.400 USD so với phiên bản tiêu chuẩn.",
+    "link": "https://vnexpress.net/lexus-lx-700h-ban-gioi-han-10-xe-ra-mat-4858775.html",
+    "cat": "oto-xe-may",
+    "positivity": 9,
+    "importance": 7,
+    "question": "Phiên bản Lexus LX 700h Hideki Edition có bao nhiêu xe được sản xuất?",
+    "answers": [
+      {
+        "text": "10 xe",
+        "correct": true
+      },
+      {
+        "text": "20 xe",
+        "correct": false
+      },
+      {
+        "text": "15 xe",
+        "correct": false
+      },
+      {
+        "text": "5 xe",
+        "correct": false
+      },
+      {
+        "text": "12 xe",
         "correct": false
       }
     ]
@@ -3602,6 +3656,33 @@
     ]
   },
   {
+    "title": "Toyota - 'trùm' xe hybrid tại Việt Nam",
+    "content": "Toyota đã dẫn đầu thị trường xe hybrid tại Việt Nam trong năm 2024 với doanh số đạt hơn 5.300 chiếc, chiếm khoảng 54% thị phần. Hãng đã có mặt tại Việt Nam gần 30 năm và đóng vai trò quan trọng trong việc phát triển xe hybrid. Mặc dù xe thuần điện đang được khuyến khích, Toyota vẫn tiếp tục đầu tư vào công nghệ hybrid, với kế hoạch mở rộng sản phẩm trong tương lai để đáp ứng nhu cầu thị trường.",
+    "link": "https://vnexpress.net/toyota-trum-xe-hybrid-tai-viet-nam-4858275.html",
+    "cat": "oto-xe-may",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Tại sao Toyota được coi là 'trùm' xe hybrid tại Việt Nam?",
+    "answers": [
+      {
+        "text": "Vì họ chiếm 54% thị phần xe hybrid tại Việt Nam.",
+        "correct": true
+      },
+      {
+        "text": "Họ sản xuất xe điện thuần.",
+        "correct": false
+      },
+      {
+        "text": "Họ có nhiều mẫu xe thể thao.",
+        "correct": false
+      },
+      {
+        "text": "Họ chỉ bán xe chạy bằng xăng.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Genesis GV70 mới giá từ 48.000 USD",
     "content": "Genesis GV70 2025 đã được giới thiệu tại thị trường Mỹ với giá khởi điểm từ 48.000 USD. Mẫu SUV này có thiết kế ngoại thất được nâng cấp với lưới tản nhiệt táo bạo hơn và màn hình OLED 27 inch mới bên trong. Xe có hai tùy chọn động cơ: máy xăng 2.5 tăng áp 300 mã lực và động cơ V6 3.5 tăng áp 375 mã lực. Các tính năng an toàn và hỗ trợ lái cũng được cải tiến với nhiều công nghệ hiện đại.",
     "link": "https://vnexpress.net/genesis-gv70-moi-gia-tu-48-000-usd-4858748.html",
@@ -3628,33 +3709,6 @@
       },
       {
         "text": "60.000 USD",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Toyota - 'trùm' xe hybrid tại Việt Nam",
-    "content": "Toyota đã dẫn đầu thị trường xe hybrid tại Việt Nam trong năm 2024 với doanh số đạt hơn 5.300 chiếc, chiếm khoảng 54% thị phần. Hãng đã có mặt tại Việt Nam gần 30 năm và đóng vai trò quan trọng trong việc phát triển xe hybrid. Mặc dù xe thuần điện đang được khuyến khích, Toyota vẫn tiếp tục đầu tư vào công nghệ hybrid, với kế hoạch mở rộng sản phẩm trong tương lai để đáp ứng nhu cầu thị trường.",
-    "link": "https://vnexpress.net/toyota-trum-xe-hybrid-tai-viet-nam-4858275.html",
-    "cat": "oto-xe-may",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Tại sao Toyota được coi là 'trùm' xe hybrid tại Việt Nam?",
-    "answers": [
-      {
-        "text": "Vì họ chiếm 54% thị phần xe hybrid tại Việt Nam.",
-        "correct": true
-      },
-      {
-        "text": "Họ sản xuất xe điện thuần.",
-        "correct": false
-      },
-      {
-        "text": "Họ có nhiều mẫu xe thể thao.",
-        "correct": false
-      },
-      {
-        "text": "Họ chỉ bán xe chạy bằng xăng.",
         "correct": false
       }
     ]
