Update generated content

--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -166,6 +166,33 @@
     ]
   },
   {
+    "title": "Nga trục xuất 2 nhân viên ngoại giao Anh bị cáo buộc làm gián điệp",
+    "content": "Nga đã quyết định trục xuất hai nhân viên ngoại giao Anh do bị cáo buộc hoạt động gián điệp. Cơ quan An ninh Liên bang Nga (FSB) cho biết hai công dân Anh này, bao gồm thư ký thứ hai của Đại sứ quán Anh và chồng của một nhà ngoại giao khác, đã vi phạm luật pháp Nga bằng việc cung cấp thông tin sai lệch khi xin nhập cảnh. Họ bị yêu cầu rời khỏi Nga trong vòng hai tuần và FSB cam kết sẽ tiếp tục chống lại các hoạt động tình báo nước ngoài.",
+    "link": "https://dantri.com.vn/the-gioi/nga-truc-xuat-2-nhan-vien-ngoai-giao-anh-bi-cao-buoc-lam-gian-diep-20250310155947534.htm",
+    "cat": "the-gioi",
+    "positivity": 3,
+    "importance": 7,
+    "question": "Tại sao Nga trục xuất hai nhân viên ngoại giao Anh?",
+    "answers": [
+      {
+        "text": "Do bị cáo buộc làm gián điệp",
+        "correct": true
+      },
+      {
+        "text": "Vì họ không có giấy phép làm việc",
+        "correct": false
+      },
+      {
+        "text": "Họ đã vi phạm quy định nhập cảnh",
+        "correct": false
+      },
+      {
+        "text": "Họ không tuân thủ luật pháp Nga",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Nhóm ‘bà chủ’ lãnh án tù về tội cưỡng đoạt tài sản 2 nữ nhân viên",
     "content": "Nhóm ‘bà chủ’ tại Đà Nẵng gồm bốn người đã bị tuyên án tù vì tội cưỡng đoạt tài sản từ hai nữ nhân viên. Họ đã đe dọa và uy hiếp tinh thần các nhân viên để chiếm đoạt 587 triệu đồng, mặc dù chưa thực sự chiếm đoạt được số tiền này. Tòa án đã xác định hành vi của họ là phạm tội và tuyên án 5 năm tù cho hai bị cáo và 4 năm cho hai bị cáo còn lại. Các bị cáo đã thừa nhận hành vi của mình và cho rằng họ không nhận thức được hành vi này là phạm pháp.",
     "link": "https://tuoitre.vn/nhom-ba-chu-lanh-an-tu-ve-toi-cuong-doat-tai-san-2-nu-nhan-vien-20250310155938252.htm",
@@ -192,6 +219,33 @@
       },
       {
         "text": "Đánh bạc",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Mỹ vẫn âm thầm viện trợ vũ khí cho Ukraine?",
+    "content": "Mỹ tiếp tục chuyển giao vũ khí viện trợ cho Ukraine thông qua Ba Lan, tuy nhiên quá trình này đã được thay đổi so với trước đây. Các lô hàng vũ khí hiện được lưu trữ tại một căn cứ quân sự của Mỹ gần sân bay Rzeszow-Jasionka trước khi được chuyển tiếp vào Ukraine. Mặc dù Tổng thống Trump đã đình chỉ một số hỗ trợ quân sự, nhưng điều này không đồng nghĩa với việc dừng hoàn toàn viện trợ, mà chỉ thay đổi cách thức phân phối nhằm kiểm soát tốt hơn.",
+    "link": "https://dantri.com.vn/the-gioi/my-van-am-tham-vien-tro-vu-khi-cho-ukraine-20250310152827798.htm",
+    "cat": "the-gioi",
+    "positivity": 6,
+    "importance": 8,
+    "question": "Mỹ có còn viện trợ vũ khí cho Ukraine không?",
+    "answers": [
+      {
+        "text": "Có, Mỹ vẫn tiếp tục viện trợ vũ khí cho Ukraine.",
+        "correct": true
+      },
+      {
+        "text": "Không, Mỹ đã ngừng viện trợ hoàn toàn.",
+        "correct": false
+      },
+      {
+        "text": "Mỹ chỉ viện trợ vũ khí cho các nước khác.",
+        "correct": false
+      },
+      {
+        "text": "Viện trợ vũ khí đã bị đình chỉ từ năm ngoái.",
         "correct": false
       }
     ]
@@ -317,33 +371,6 @@
     ]
   },
   {
-    "title": "Những thắc mắc thường gặp về dậy thì ở bé gái",
-    "content": "Bài viết cung cấp thông tin về những thắc mắc thường gặp ở bé gái trong giai đoạn dậy thì, từ 9 đến 13 tuổi. Các thay đổi cơ thể như sự phát triển của ngực, tăng chiều cao, và sự xuất hiện của mụn trứng cá được đề cập. Những câu hỏi phổ biến như lý do đổ mồ hôi nhiều, sự phát triển của ngực, và tình trạng tăng cân cũng được giải thích. Đặc biệt, bài viết nhấn mạnh rằng những thay đổi này là bình thường và trẻ nên giữ gìn vệ sinh và tham khảo ý kiến bác sĩ khi cần.",
-    "link": "https://vnexpress.net/nhung-thac-mac-thuong-gap-ve-day-thi-o-be-gai-4858975.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Bé gái thường gặp phải những thay đổi gì trong giai đoạn dậy thì?",
-    "answers": [
-      {
-        "text": "Sự phát triển của ngực, tăng chiều cao và nổi mụn trứng cá.",
-        "correct": true
-      },
-      {
-        "text": "Chỉ tăng cân mà không có sự thay đổi khác.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ phát triển chiều cao mà không có sự thay đổi nào khác.",
-        "correct": false
-      },
-      {
-        "text": "Không có sự thay đổi nào trong giai đoạn dậy thì.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Hội chứng Guillain - Barré nguy hiểm không?",
     "content": "Hội chứng Guillain - Barré là một bệnh lý thần kinh cơ ngoại vi tự miễn cấp tính, xảy ra khi hệ miễn dịch tấn công các dây thần kinh ngoại vi, dẫn đến tổn thương chức năng thần kinh. Bệnh có thể gây ra triệu chứng như yếu liệt, tê bì, và trong trường hợp nặng có thể dẫn đến khó thở và tử vong. Điều trị hội chứng này cần được thực hiện kịp thời tại chuyên khoa thần kinh, với các phương pháp như thay huyết tương và thuốc ức chế miễn dịch. Nếu không điều trị sớm, bệnh có thể tiến triển nặng và gây ra nhiều biến chứng nguy hiểm.",
     "link": "https://vnexpress.net/hoi-chung-guillain-barre-nguy-hiem-khong-4859113.html",
@@ -393,6 +420,33 @@
       },
       {
         "text": "Bàn chân bẹt sẽ tự khỏi mà không cần điều trị.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Những thắc mắc thường gặp về dậy thì ở bé gái",
+    "content": "Bài viết cung cấp thông tin về những thắc mắc thường gặp ở bé gái trong giai đoạn dậy thì, từ 9 đến 13 tuổi. Các thay đổi cơ thể như sự phát triển của ngực, tăng chiều cao, và sự xuất hiện của mụn trứng cá được đề cập. Những câu hỏi phổ biến như lý do đổ mồ hôi nhiều, sự phát triển của ngực, và tình trạng tăng cân cũng được giải thích. Đặc biệt, bài viết nhấn mạnh rằng những thay đổi này là bình thường và trẻ nên giữ gìn vệ sinh và tham khảo ý kiến bác sĩ khi cần.",
+    "link": "https://vnexpress.net/nhung-thac-mac-thuong-gap-ve-day-thi-o-be-gai-4858975.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Bé gái thường gặp phải những thay đổi gì trong giai đoạn dậy thì?",
+    "answers": [
+      {
+        "text": "Sự phát triển của ngực, tăng chiều cao và nổi mụn trứng cá.",
+        "correct": true
+      },
+      {
+        "text": "Chỉ tăng cân mà không có sự thay đổi khác.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ phát triển chiều cao mà không có sự thay đổi nào khác.",
+        "correct": false
+      },
+      {
+        "text": "Không có sự thay đổi nào trong giai đoạn dậy thì.",
         "correct": false
       }
     ]
@@ -1136,6 +1190,33 @@
     ]
   },
   {
+    "title": "Cúm ảnh hưởng công việc thế nào?",
+    "content": "Bệnh cúm có thể ảnh hưởng nghiêm trọng đến sức khỏe và hiệu suất làm việc của người lao động. Khi mắc cúm, người lao động thường phải nghỉ làm, gây gián đoạn trong sản xuất và cung ứng. Sự gia tăng ca mắc cúm trong doanh nghiệp có thể dẫn đến tổn thất kinh tế lớn, với hàng tỷ USD mất mát mỗi năm. Để giảm thiểu tác động của cúm, việc tiêm vaccine hàng năm là rất cần thiết.",
+    "link": "https://vnexpress.net/cum-anh-huong-cong-viec-the-nao-4859106.html",
+    "cat": "suc-khoe",
+    "positivity": 4,
+    "importance": 8,
+    "question": "Bệnh cúm ảnh hưởng đến công việc như thế nào?",
+    "answers": [
+      {
+        "text": "Cúm làm giảm hiệu suất lao động và gây gián đoạn sản xuất.",
+        "correct": true
+      },
+      {
+        "text": "Cúm không ảnh hưởng gì đến công việc.",
+        "correct": false
+      },
+      {
+        "text": "Cúm chỉ gây ra mệt mỏi nhưng không cần nghỉ làm.",
+        "correct": false
+      },
+      {
+        "text": "Cúm chỉ ảnh hưởng đến sức khỏe cá nhân, không liên quan đến công việc.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "PVcomBank ưu đãi với lãi suất chưa đến 4%/năm",
     "content": "Ngân hàng TMCP Đại Chúng Việt Nam (PVcomBank) vừa công bố gói tín dụng ưu đãi mang tên 'Hành trình mới, sống trọn ước mơ' với lãi suất chỉ từ 3,99%/năm. Gói vay này được áp dụng cho cá nhân có nhu cầu mua nhà và hộ kinh doanh, với hạn mức vay lên đến 85% giá trị tài sản và thời gian vay tối đa 35 năm. PVcomBank cũng cam kết đơn giản hóa thủ tục và linh hoạt trong việc chứng minh thu nhập để giúp khách hàng dễ dàng tiếp cận nguồn vốn.",
     "link": "https://tuoitre.vn/pvcombank-uu-dai-voi-lai-suat-chua-den-4-nam-20250310115138353.htm",
@@ -1189,33 +1270,6 @@
       },
       {
         "text": "Vì họ yếu sinh lý.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Cúm ảnh hưởng công việc thế nào?",
-    "content": "Bệnh cúm có thể ảnh hưởng nghiêm trọng đến sức khỏe và hiệu suất làm việc của người lao động. Khi mắc cúm, người lao động thường phải nghỉ làm, gây gián đoạn trong sản xuất và cung ứng. Sự gia tăng ca mắc cúm trong doanh nghiệp có thể dẫn đến tổn thất kinh tế lớn, với hàng tỷ USD mất mát mỗi năm. Để giảm thiểu tác động của cúm, việc tiêm vaccine hàng năm là rất cần thiết.",
-    "link": "https://vnexpress.net/cum-anh-huong-cong-viec-the-nao-4859106.html",
-    "cat": "suc-khoe",
-    "positivity": 4,
-    "importance": 8,
-    "question": "Bệnh cúm ảnh hưởng đến công việc như thế nào?",
-    "answers": [
-      {
-        "text": "Cúm làm giảm hiệu suất lao động và gây gián đoạn sản xuất.",
-        "correct": true
-      },
-      {
-        "text": "Cúm không ảnh hưởng gì đến công việc.",
-        "correct": false
-      },
-      {
-        "text": "Cúm chỉ gây ra mệt mỏi nhưng không cần nghỉ làm.",
-        "correct": false
-      },
-      {
-        "text": "Cúm chỉ ảnh hưởng đến sức khỏe cá nhân, không liên quan đến công việc.",
         "correct": false
       }
     ]
@@ -1693,6 +1747,33 @@
     ]
   },
   {
+    "title": "Tê tay có phải dấu hiệu đột quỵ?",
+    "content": "Tê tay có thể xuất phát từ nhiều nguyên nhân khác nhau, nhưng nó cũng có thể là dấu hiệu cảnh báo đột quỵ. Việc nhận biết sớm các triệu chứng này cực kỳ quan trọng để tránh những biến chứng nguy hiểm. Bài viết nhấn mạnh tầm quan trọng của việc theo dõi các dấu hiệu để có phản ứng kịp thời.",
+    "link": "https://vnexpress.net/te-tay-co-phai-dau-hieu-dot-quy-4858950.html",
+    "cat": "suc-khoe",
+    "positivity": 6,
+    "importance": 8,
+    "question": "Tê tay có phải là dấu hiệu của đột quỵ không?",
+    "answers": [
+      {
+        "text": "Có, tê tay có thể là dấu hiệu của đột quỵ.",
+        "correct": true
+      },
+      {
+        "text": "Không, tê tay chỉ là triệu chứng bình thường.",
+        "correct": false
+      },
+      {
+        "text": "Có, nhưng nó không liên quan đến sức khỏe.",
+        "correct": false
+      },
+      {
+        "text": "Không, tê tay không ảnh hưởng đến đột quỵ.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Hàng chục chiếc VF 3 dạo phố trước cuộc thi của VinFast",
     "content": "Vào ngày Quốc tế phụ nữ 8/3, một nhóm hơn 40 nữ chủ xe VF 3 đã tổ chức một cuộc diễu hành qua các tuyến phố Hà Nội để quảng bá cho cuộc thi \"Sáng tạo chất riêng, Độc bản cá tính\" do VinFast tổ chức. Những chiếc xe VF 3 được cá nhân hóa với nhiều màu sắc và phong cách khác nhau đã thu hút sự chú ý của đông đảo người dân. Sự kiện này không chỉ là dịp để các chị em giao lưu mà còn lan tỏa cảm hứng sáng tạo trong cộng đồng. Cuộc thi sẽ diễn ra vào ngày 22/3 tại nhiều thành phố lớn, với tổng giá trị giải thưởng lên tới 650 triệu đồng.",
     "link": "https://vnexpress.net/hang-chuc-chiec-vf-3-dao-pho-truoc-cuoc-thi-cua-vinfast-4859032.html",
@@ -1719,33 +1800,6 @@
       },
       {
         "text": "1/3",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Tê tay có phải dấu hiệu đột quỵ?",
-    "content": "Tê tay có thể xuất phát từ nhiều nguyên nhân khác nhau, nhưng nó cũng có thể là dấu hiệu cảnh báo đột quỵ. Việc nhận biết sớm các triệu chứng này cực kỳ quan trọng để tránh những biến chứng nguy hiểm. Bài viết nhấn mạnh tầm quan trọng của việc theo dõi các dấu hiệu để có phản ứng kịp thời.",
-    "link": "https://vnexpress.net/te-tay-co-phai-dau-hieu-dot-quy-4858950.html",
-    "cat": "suc-khoe",
-    "positivity": 6,
-    "importance": 8,
-    "question": "Tê tay có phải là dấu hiệu của đột quỵ không?",
-    "answers": [
-      {
-        "text": "Có, tê tay có thể là dấu hiệu của đột quỵ.",
-        "correct": true
-      },
-      {
-        "text": "Không, tê tay chỉ là triệu chứng bình thường.",
-        "correct": false
-      },
-      {
-        "text": "Có, nhưng nó không liên quan đến sức khỏe.",
-        "correct": false
-      },
-      {
-        "text": "Không, tê tay không ảnh hưởng đến đột quỵ.",
         "correct": false
       }
     ]
@@ -2381,37 +2435,6 @@
     ]
   },
   {
-    "title": "BMW tung ưu đãi mới cho sedan 3 series",
-    "content": "BMW vừa công bố chương trình ưu đãi cho mẫu sedan 3 series, trong đó khách hàng mua xe trả góp sẽ nhận lãi suất 0% trong 12 tháng đầu với khoản vay lên đến 70% giá trị xe. Chương trình này được áp dụng từ tháng 3 năm 2025, nhằm khuyến khích tiêu thụ trong bối cảnh thị trường ôtô đang phục hồi. Ngoài ra, khách hàng còn được hưởng dịch vụ hậu mãi hấp dẫn như bảo hành 5 năm không giới hạn km và cơ hội tham gia bốc thăm chuyến du lịch châu Âu.",
-    "link": "https://vnexpress.net/bmw-tung-uu-dai-moi-cho-sedan-3-series-4858930.html",
-    "cat": "oto-xe-may",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Chương trình ưu đãi nào mà BMW dành cho sedan 3 series?",
-    "answers": [
-      {
-        "text": "Hỗ trợ lãi suất 0% trong 12 tháng",
-        "correct": true
-      },
-      {
-        "text": "Giảm giá trực tiếp cho xe",
-        "correct": false
-      },
-      {
-        "text": "Tặng kèm phụ kiện xe",
-        "correct": false
-      },
-      {
-        "text": "Miễn phí bảo dưỡng trọn đời",
-        "correct": false
-      },
-      {
-        "text": "Tặng vé xem phim cho khách hàng",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Bé chậm tăng cân do lỗ thông liên nhĩ",
     "content": "Minh Anh, 2 tuổi, bị thông liên nhĩ lớn dẫn đến chậm tăng cân và thường xuyên viêm đường hô hấp. Sau khi theo dõi và điều trị dinh dưỡng, bé đã đủ điều kiện để can thiệp đóng lỗ thông. Bác sĩ thực hiện thủ thuật xâm lấn tối thiểu để bít lỗ thông liên nhĩ mà không gây tổn thương. Sau can thiệp, sức khỏe của Minh Anh cải thiện rõ rệt, không còn viêm hô hấp và tăng cân tốt hơn.",
     "link": "https://vnexpress.net/be-cham-tang-can-do-lo-thong-lien-nhi-4858895.html",
@@ -2438,6 +2461,37 @@
       },
       {
         "text": "Viêm phổi",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "BMW tung ưu đãi mới cho sedan 3 series",
+    "content": "BMW vừa công bố chương trình ưu đãi cho mẫu sedan 3 series, trong đó khách hàng mua xe trả góp sẽ nhận lãi suất 0% trong 12 tháng đầu với khoản vay lên đến 70% giá trị xe. Chương trình này được áp dụng từ tháng 3 năm 2025, nhằm khuyến khích tiêu thụ trong bối cảnh thị trường ôtô đang phục hồi. Ngoài ra, khách hàng còn được hưởng dịch vụ hậu mãi hấp dẫn như bảo hành 5 năm không giới hạn km và cơ hội tham gia bốc thăm chuyến du lịch châu Âu.",
+    "link": "https://vnexpress.net/bmw-tung-uu-dai-moi-cho-sedan-3-series-4858930.html",
+    "cat": "oto-xe-may",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Chương trình ưu đãi nào mà BMW dành cho sedan 3 series?",
+    "answers": [
+      {
+        "text": "Hỗ trợ lãi suất 0% trong 12 tháng",
+        "correct": true
+      },
+      {
+        "text": "Giảm giá trực tiếp cho xe",
+        "correct": false
+      },
+      {
+        "text": "Tặng kèm phụ kiện xe",
+        "correct": false
+      },
+      {
+        "text": "Miễn phí bảo dưỡng trọn đời",
+        "correct": false
+      },
+      {
+        "text": "Tặng vé xem phim cho khách hàng",
         "correct": false
       }
     ]
